# Lab01_PART1_119939

./: README.md  pyproject.toml
src/: main.py
src/config/: config.py
src/dataclass/: database_dataclass.py  kaggle_dataclass.py
src/service/: gold_service.py  raw_service.py  silver_service.py
